--- a/index.html
+++ b/index.html
@@ -15,55 +15,55 @@
       <section class="profile">
           <img class="profile__avatar" src="images/user-photo.jpg" alt="фото пользователя">
           <div class="profile__info">
-                <div class="profile__flexbox">
+                <div class="profile__box">
                     <h1 class="profile__name">Жак-Ив Кусто</h1>
                     <p class="profile__description">Исследователь океана</p>
                 </div>
-              <a class= "profile__edit-button-flex" href="#"><div class="profile__edit-button"></div></a>
+              <a class="profile__edit-button" href="#popup"></a>
           </div>
-          <a class="profile__button-flex" href="#"><div class="profile__button"></div></a>
+          <a class="profile__button" href="#"></a>
       </section>
       <section class="elements">
         <div class="element">
             <img class="element__image" src="images/Karachay-Cherkessk.jpg" alt="Карачаево-черкессия">
             <div class="element__flexbox">
             <p class="element__title">Карачаево-черкессия</p>
-            <a class="element__likes-center" href="#"><div class="element__likes"></div></a>
+            <a class="element__likes" href="#"></a>
+           </div>
+        </div>
+        <div class="element">
+            <img class="element__image" src="images/elbrus.jpg" alt="Гора Эльбрус">
+            <div class="element__flexbox">
+            <p class="element__title">Гора Эльбрус</p>
+            <a class="element__likes" href="#"></a>
+           </div>
+        </div>
+        <div class="element">
+            <img class="element__image" src="images/dombay.jpg" alt="Домбай">
+            <div class="element__flexbox">
+            <p class="element__title">Домбай</p>
+            <a class="element__likes" href="#"></a>
            </div>
         </div>
         <div class="element">
             <img class="element__image" src="images/Karachay-Cherkessk.jpg" alt="Карачаево-черкессия">
             <div class="element__flexbox">
             <p class="element__title">Карачаево-черкессия</p>
-            <a class="element__likes-center" href="#"><div class="element__likes"></div></a>
+            <a class="element__likes" href="#"></a>
            </div>
         </div>
         <div class="element">
             <img class="element__image" src="images/Karachay-Cherkessk.jpg" alt="Карачаево-черкессия">
             <div class="element__flexbox">
             <p class="element__title">Карачаево-черкессия</p>
-            <a class="element__likes-center" href="#"><div class="element__likes"></div></a>
+            <a class="element__likes" href="#"></a>
            </div>
         </div>
         <div class="element">
             <img class="element__image" src="images/Karachay-Cherkessk.jpg" alt="Карачаево-черкессия">
             <div class="element__flexbox">
             <p class="element__title">Карачаево-черкессия</p>
-            <a class="element__likes-center" href="#"><div class="element__likes"></div></a>
-           </div>
-        </div>
-        <div class="element">
-            <img class="element__image" src="images/Karachay-Cherkessk.jpg" alt="Карачаево-черкессия">
-            <div class="element__flexbox">
-            <p class="element__title">Карачаево-черкессия</p>
-            <a class="element__likes-center" href="#"><div class="element__likes"></div></a>
-           </div>
-        </div>
-        <div class="element">
-            <img class="element__image" src="images/Karachay-Cherkessk.jpg" alt="Карачаево-черкессия">
-            <div class="element__flexbox">
-            <p class="element__title">Карачаево-черкессия</p>
-            <a class="element__likes-center" href="#"><div class="element__likes"></div></a>
+            <a class="element__likes" href="#"></a>
            </div>
         </div>
         </section>
@@ -71,22 +71,23 @@
           <p class="footer__copy">© 2020 Mesto Russia</p>
       </footer>
   </div>
-  <div id="popup" class="popup">
+    <div id="popup" class="popup">
       <div class="popup__body">
           <div class="popup__content">
-              <a href="#" class="popup__close"></a>
+              <a href="#popup"" class="popup__close"></a>
             <form class="form">
                 <h2 class="form__heading">Редактировать профиль</h2>
                 <fieldset class="form__input-container">
-                    <input class="form__input-name" type="text" name="" id="">
-                    <input class="form__imput-description" type="text" name="" id="">
+                    <input class="form__item form__nameinput" type="text" name="" id="" placeholder="Жак-Ив Кусто" value="Жак-Ив Кусто">
+                    <input class="form__item form__jobinput" type="text" name="" id="" placeholder="Исследователь океана" value="Исследователь океана">
                 </fieldset>
                 <fieldset class="form__handler">
-                    <input  class="form__button" type="submit" name="" id="">
+                    <input  class="form__button" type="submit" value="Сохранить" name="" id="">
                 </fieldset>
             </form>
           </div>
       </div>
   </div>
+   <script src="pages/index.js"></script>
 </body>
 </html>
