--- a/index.html
+++ b/index.html
@@ -74,15 +74,15 @@
     <div id="popup" class="popup">
       <div class="popup__body">
           <div class="popup__content">
-              <a href="#popup"" class="popup__close"></a>
+              <a href="#popup" class="popup__close"></a>
             <form class="form">
                 <h2 class="form__heading">Редактировать профиль</h2>
                 <fieldset class="form__input-container">
-                    <input class="form__item form__nameinput" type="text" name="" id="" placeholder="Жак-Ив Кусто" value="Жак-Ив Кусто">
-                    <input class="form__item form__jobinput" type="text" name="" id="" placeholder="Исследователь океана" value="Исследователь океана">
+                    <input class="form__item form__nameinput" type="text" placeholder="Жак-Ив Кусто" value="Жак-Ив Кусто">
+                    <input class="form__item form__jobinput" type="text" placeholder="Исследователь океана" value="Исследователь океана">
                 </fieldset>
                 <fieldset class="form__handler">
-                    <input  class="form__button" type="submit" value="Сохранить" name="" id="">
+                    <input  class="form__button" type="submit" value="Сохранить">
                 </fieldset>
             </form>
           </div>
