--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <h1 class="profile__name">Жак-Ив Кусто</h1>
                     <p class="profile__description">Исследователь океана</p>
                 </div>
-              <a class="profile__edit-button" href="#popup"></a>
+              <a class="profile__edit-button" href="#popup" target="_blank"></a>
           </div>
           <a class="profile__button" href="#"></a>
       </section>
@@ -35,35 +35,35 @@
             <img class="element__image" src="images/elbrus.jpg" alt="Гора Эльбрус">
             <div class="element__flexbox">
             <p class="element__title">Гора Эльбрус</p>
-            <a class="element__likes" href="#"></a>
+            <a class="element__likes" href="#" target="_blank"></a>
            </div>
         </div>
         <div class="element">
             <img class="element__image" src="images/dombay.jpg" alt="Домбай">
             <div class="element__flexbox">
             <p class="element__title">Домбай</p>
-            <a class="element__likes" href="#"></a>
+            <a class="element__likes" href="#" target="_blank"></a>
            </div>
         </div>
         <div class="element">
             <img class="element__image" src="images/Karachay-Cherkessk.jpg" alt="Карачаево-черкессия">
             <div class="element__flexbox">
             <p class="element__title">Карачаево-черкессия</p>
-            <a class="element__likes" href="#"></a>
+            <a class="element__likes" href="#" target="_blank"></a>
            </div>
         </div>
         <div class="element">
             <img class="element__image" src="images/Karachay-Cherkessk.jpg" alt="Карачаево-черкессия">
             <div class="element__flexbox">
             <p class="element__title">Карачаево-черкессия</p>
-            <a class="element__likes" href="#"></a>
+            <a class="element__likes" href="#" target="_blank"></a>
            </div>
         </div>
         <div class="element">
             <img class="element__image" src="images/Karachay-Cherkessk.jpg" alt="Карачаево-черкессия">
             <div class="element__flexbox">
             <p class="element__title">Карачаево-черкессия</p>
-            <a class="element__likes" href="#"></a>
+            <a class="element__likes" href="#" target="_blank"></a>
            </div>
         </div>
         </section>
@@ -74,7 +74,7 @@
     <div id="popup" class="popup">
       <div class="popup__body">
           <div class="popup__content">
-              <a href="#popup" class="popup__close"></a>
+              <a href="#popup" class="popup__close" target="_blank"></a>
             <form class="form">
                 <h2 class="form__heading">Редактировать профиль</h2>
                 <fieldset class="form__input-container">
