fix target="_blank" 24 31

--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
                 </div>
               <a class="profile__edit-button" href="#popup" target="_blank"></a>
           </div>
-          <a class="profile__button" href="#"></a>
+          <a class="profile__button" href="#" target="_blank"></a>
       </section>
       <section class="elements">
         <div class="element">
             <img class="element__image" src="images/Karachay-Cherkessk.jpg" alt="Карачаево-черкессия">
             <div class="element__flexbox">
             <p class="element__title">Карачаево-черкессия</p>
-            <a class="element__likes" href="#"></a>
+            <a class="element__likes" href="#" target="_blank"></a>
            </div>
         </div>
         <div class="element">
