--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
                     <h1 class="profile__name">Жак-Ив Кусто</h1>
                     <p class="profile__description">Исследователь океана</p>
                 </div>
-              <a class="profile__edit-button" href="#popup" target="_blank"></a>
+              <a class="profile__edit-button" href="#popup" target="_self"></a>
           </div>
-          <a class="profile__button" href="#" target="_blank"></a>
+          <a class="profile__button" href="#" target="_self"></a>
       </section>
       <section class="elements">
         <div class="element">
@@ -74,15 +74,15 @@
     <div id="popup" class="popup">
       <div class="popup__body">
           <div class="popup__content">
-              <a href="#popup" class="popup__close" target="_blank"></a>
-            <form class="form">
-                <h2 class="form__heading">Редактировать профиль</h2>
-                <fieldset class="form__input-container">
-                    <input class="form__item form__nameinput" type="text" placeholder="Жак-Ив Кусто" value="Жак-Ив Кусто">
-                    <input class="form__item form__jobinput" type="text" placeholder="Исследователь океана" value="Исследователь океана">
+              <a href="#popup" class="popup__close" target="_self"></a>
+            <form class="popup__form">
+                <h2 class="popup__form-heading">Редактировать профиль</h2>
+                <fieldset class="popup__form-input-container">
+                    <input class="popup__form-item popup__form-nameinput" type="text" placeholder="Жак-Ив Кусто" value="Жак-Ив Кусто">
+                    <input class="popup__form-item popup__form-jobinput" type="text" placeholder="Исследователь океана" value="Исследователь океана">
                 </fieldset>
-                <fieldset class="form__handler">
-                    <input  class="form__button" type="submit" value="Сохранить">
+                <fieldset class="popup__form-handler">
+                    <input  class="popup__form-button" type="submit" value="Сохранить">
                 </fieldset>
             </form>
           </div>
