--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                 </section>
                 <section class="elements">
                     <article class="element">
-                        <img class="element__image" src="images/Karachay-Cherkessk.jpg" alt="Карачаево-черкессия" />
-                        <div class="element__flexbox">
+                        <img class="element__image" src="images/karachay-cherkessk.jpg" alt="Карачаево-черкессия" />
+                        <div class="element__flexbox"
                             <h2 class="element__title">Карачаево-черкессия</h2>
                             <!-- <a class="element__likes" href="#" target="_self"></a> -->
                             <button class="element__likes" type="button"></button>
