--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
         <div class="page">
             <header class="header">
                 <div class="header__logo"></div>
-                <!-- <div class="header__line"></div> -->
             </header>
             <main class="main">
                 <section class="profile">
@@ -84,8 +83,8 @@
                     <form class="popup__form" name="form">
                         <h2 class="popup__form-heading">Редактировать профиль</h2>
                         <fieldset class="popup__form-input-container">
-                            <input class="popup__form-item popup__form-nameinput" id="popup__form-nameinput" name="form-name" type="text" placeholder="Жак-Ив Кусто" value="Жак-Ив Кусто" />
-                            <input class="popup__form-item popup__form-jobinput" id="popup__form-jobinput" name="form-job" type="text" placeholder="Исследователь океана" value="Исследователь океана" />
+                            <input class="popup__form-item popup__form-nameinput" id="popup__form-nameinput" name="form-name" type="text" placeholder="Ваше имя" value="Жак-Ив Кусто" />
+                            <input class="popup__form-item popup__form-jobinput" id="popup__form-jobinput" name="form-job" type="text" placeholder="Ваш вид деятельности" value="Исследователь океана" />
                         </fieldset>
                         <div class="popup__form-handler">
                             <!-- <input  class="popup__form-button" type="submit" value="Сохранить"> -->
