--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
                     <form class="popup__form" name="form">
                         <h2 class="popup__form-heading">Редактировать профиль</h2>
                         <fieldset class="popup__form-input-container">
-                            <input class="popup__form-item popup__form-nameinput" id="popup__form-nameinput" name="form-name" type="text" placeholder="Ваше имя" value="Жак-Ив Кусто" />
-                            <input class="popup__form-item popup__form-jobinput" id="popup__form-jobinput" name="form-job" type="text" placeholder="Ваш вид деятельности" value="Исследователь океана" />
+                            <input class="popup__form-item" id="popup__form-nameinput" name="form-name" type="text" placeholder="Ваше имя" value="Жак-Ив Кусто" />
+                            <input class="popup__form-item" id="popup__form-jobinput" name="form-job" type="text" placeholder="Ваш вид деятельности" value="Исследователь океана" />
                         </fieldset>
                         <div class="popup__form-handler">
                             <!-- <input  class="popup__form-button" type="submit" value="Сохранить"> -->
