--- a/index.html
+++ b/index.html
@@ -1,42 +1,44 @@
 <!DOCTYPE html>
 <html lang="ru">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="pages/index.css" />
-        <title>Путешествия, интересные места</title>
-    </head>
-    <body class="root">
-        <div class="page">
-            <header class="header">
-                <div class="header__logo"></div>
-            </header>
-            <main class="main">
-                <section class="profile">
-                    <img class="profile__avatar" src="images/user-photo.jpg" alt="фото пользователя" />
-                    <div class="profile__info">
-                        <div class="profile__box">
-                            <h1 class="profile__name">Жак-Ив Кусто</h1>
-                            <p class="profile__description">Исследователь океана</p>
-                        </div>
-                        <button class="profile__edit-button" type="button"></button>
+
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="pages/index.css" />
+    <title>Путешествия, интересные места</title>
+</head>
+
+<body class="root">
+    <div class="page">
+        <header class="header">
+            <div class="header__logo"></div>
+        </header>
+        <main class="main">
+            <section class="profile">
+                <img class="profile__avatar" src="images/user-photo.jpg" alt="фото пользователя" />
+                <div class="profile__info">
+                    <div class="profile__box">
+                        <h1 class="profile__name">Жак-Ив Кусто</h1>
+                        <p class="profile__description">Исследователь океана</p>
                     </div>
-                    <button class="profile__button" type="button"></button>
-                </section>
+                    <button class="profile__edit-button" type="button"></button>
+                </div>
+                <button class="profile__button" type="button"></button>
+            </section>
 
-                <section class="elements">
-                    <template id="card__element">
-                        <article class="element">
-                            <batton class="element__trash-icon" type="button"></batton>
-                            <img class="element__image" src="images/karachay-cherkessk.jpg" />
-                            <div class="element__flexbox">
-                                <h2 class="element__title">Карачаево-черкессия</h2>
-                                <button class="element__likes" type="button"></button>
-                            </div>
-                        </article>
-                    </template>
+            <section class="elements">
+                <template id="card__element">
+                    <article class="element">
+                        <batton class="element__trash-icon" type="button"></batton>
+                        <img class="element__image" src="images/karachay-cherkessk.jpg" alt=""/>
+                        <div class="element__flexbox">
+                            <h2 class="element__title">Карачаево-черкессия</h2>
+                            <button class="element__likes" type="button"></button>
+                        </div>
+                    </article>
+                </template>
 
-                    <!-- <article class="element">
+                <!-- <article class="element">
                         <img class="element__image" src="images/elbrus.jpg" alt="Гора Эльбрус" />
                         <div class="element__flexbox">
                             <h2 class="element__title">Гора Эльбрус</h2>
@@ -73,60 +75,66 @@
                             <button class="element__likes" type="button"></button>
                         </div>
                     </article>   -->
-                </section>
-            </main>
-            <footer class="footer">
-                <p class="footer__copy">© 2020 Mesto Russia</p>
-            </footer>
-        </div>
-        <div id="popup" class="popup">
-            <div class="popup__body">
-                <div class="popup__content">
-                    <button class="popup__close" type="button"></button>
-                    <form class="popup__form" name="form">
-                        <h2 class="popup__form-heading">Редактировать профиль</h2>
-                        <fieldset class="popup__form-input-container">
-                            <input class="popup__form-item" id="popup__form-nameinput" name="form-name" type="text" placeholder="Ваше имя" value="Жак-Ив Кусто" />
-                            <input class="popup__form-item" id="popup__form-jobinput" name="form-job" type="text" placeholder="Ваш вид деятельности" value="Исследователь океана" />
-                        </fieldset>
-                        <div class="popup__form-handler">
-                            <button class="popup__form-button" type="submit">Сохранить</button>
-                        </div>
-                    </form>
-                </div>
+            </section>
+        </main>
+        <footer class="footer">
+            <p class="footer__copy">© 2020 Mesto Russia</p>
+        </footer>
+    </div>
+    <div id="popup" class="popup">
+        <div class="popup__body">
+            <div class="popup__content">
+                <button class="popup__close" type="button"></button>
+                <form class="popup__form" name="form">
+                    <h2 class="popup__form-heading">Редактировать профиль</h2>
+                    <fieldset class="popup__form-input-container">
+                        <input class="popup__form-item" id="popup__form-nameinput" name="form-name" type="text"
+                            placeholder="Ваше имя" value="Жак-Ив Кусто" />
+                        <input class="popup__form-item" id="popup__form-jobinput" name="form-job" type="text"
+                            placeholder="Ваш вид деятельности" value="Исследователь океана" />
+                    </fieldset>
+                    <div class="popup__form-handler">
+                        <button class="popup__form-button" type="submit">Сохранить</button>
+                    </div>
+                </form>
             </div>
         </div>
-        <div id="addcard" class="popup">
-            <div class="popup__body">
-                <div class="popup__content">
-                    <button id="closecard" class="popup__close" type="button"></button>
-                    <form id="form-card" class="popup__form" name="form">
-                        <h2 class="popup__form-heading">Новое место</h2>
-                        <fieldset class="popup__form-input-container">
-                            <input class="popup__form-item" id="popup__form-nameinput-card" name="form-name-card" type="text" placeholder="Название" />
-                            <input class="popup__form-item" id="popup__form-link" name="form-link" type="text" placeholder="Сылка на картинку" />
-                        </fieldset>
-                        <div class="popup__form-handler">
-                            <button class="popup__form-button" type="submit">Сохранить</button>
-                        </div>
-                    </form>
-                </div>
+    </div>
+    <div id="addcard" class="popup">
+        <div class="popup__body">
+            <div class="popup__content">
+                <button id="closecard" class="popup__close" type="button"></button>
+                <form id="form-card" class="popup__form" name="form">
+                    <h2 class="popup__form-heading">Новое место</h2>
+                    <fieldset class="popup__form-input-container">
+                        <input class="popup__form-item" id="popup__form-nameinput-card" name="form-name-card"
+                            type="text" placeholder="Название" />
+                        <input class="popup__form-item" id="popup__form-link" name="form-link" type="text"
+                            placeholder="Сылка на картинку" />
+                    </fieldset>
+                    <div class="popup__form-handler">
+                        <button class="popup__form-button" type="submit">Сохранить</button>
+                    </div>
+                </form>
             </div>
         </div>
-        <div id="popup-img" class="popup-img">
-            <div class="popup-img__body">
-                <div class="popup-img__content">
-                    <button id="closecardimg" class="popup-img__close" type="button"></button>
-                    <img class="popup__image" src="https://pictures.s3.yandex.net/frontend-developer/cards-compressed/baikal.jpg" />
-                    <h2 class="popup-img__heading">Hазвание места</h2>
-                </div>
+    </div>
+    <div id="popup-img" class="popup-img">
+        <div class="popup-img__body">
+            <div class="popup-img__content">
+                <button id="closecardimg" class="popup-img__close" type="button"></button>
+                <img class="popup-img__image"
+                    src="https://pictures.s3.yandex.net/frontend-developer/cards-compressed/baikal.jpg" alt=""/>
+                <h2 class="popup-img__heading">Hазвание места</h2>
             </div>
         </div>
+    </div>
 
-        <script src="scripts/popup-image.js"></script>
-        <script src="scripts/addcard.js"></script>
-        <script src="scripts/initial.js"></script>
-        <script src="scripts/index.js"></script>
-        <script src="scripts/likes.js"></script>
-    </body>
+    
+    <script src="scripts/addcard.js"></script>
+    <script src="scripts/initial.js"></script>
+    <script src="scripts/index.js"></script>
+    
+</body>
+
 </html>
