--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <template id="card__element">
                     <article class="element">
                         <batton class="element__trash-icon" type="button"></batton>
-                        <img class="element__image" src="images/karachay-cherkessk.jpg" alt=""/>
+                        <img class="element__image" src="images/karachay-cherkessk.jpg" alt="Карачаево-черкессия"/>
                         <div class="element__flexbox">
                             <h2 class="element__title">Карачаево-черкессия</h2>
                             <button class="element__likes" type="button"></button>
@@ -124,7 +124,7 @@
             <div class="popup-img__content">
                 <button id="closecardimg" class="popup-img__close" type="button"></button>
                 <img class="popup-img__image"
-                    src="https://pictures.s3.yandex.net/frontend-developer/cards-compressed/baikal.jpg" alt=""/>
+                    src="https://pictures.s3.yandex.net/frontend-developer/cards-compressed/baikal.jpg" alt="Байкал"/>
                 <h2 class="popup-img__heading">Hазвание места</h2>
             </div>
         </div>
