--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <section class="elements">
                 <template id="card__element">
                     <article class="element">
-                        <batton class="element__trash-icon" type="button"></batton>
+                        <button class="element__trash-icon" type="button"></button>
                         <img class="element__image" src="images/karachay-cherkessk.jpg" alt="Карачаево-черкессия"/>
                         <div class="element__flexbox">
                             <h2 class="element__title">Карачаево-черкессия</h2>
