--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
             <p class="footer__copy">© 2020 Mesto Russia</p>
         </footer>
     </div>
-    <div id="popup" class="popup">
+    <div id="popup" class="popup popup-profile">
         <div class="popup__body">
             <div class="popup__content">
-                <button class="popup__close" type="button"></button>
-                <form class="popup__form" name="form">
+                <button class="popup__close popup-profile-close-btn" type="button"></button>
+                <form class="popup__form popup-profile__form" name="form">
                     <h2 class="popup__form-heading">Редактировать профиль</h2>
                     <fieldset class="popup__form-input-container">
                         <input class="popup__form-item" id="popup__form-nameinput" name="form-name" type="text"
@@ -61,10 +61,10 @@
             </div>
         </div>
     </div>
-    <div id="addcard" class="popup">
+    <div id="addcard" class="popup popup-addcard">
         <div class="popup__body">
             <div class="popup__content">
-                <button id="closecard" class="popup__close" type="button"></button>
+                <button id="closecard" class="popup__close  popup-addcard-close-btn" type="button"></button>
                 <form id="form-card" class="popup__form" name="form">
                     <h2 class="popup__form-heading">Новое место</h2>
                     <fieldset class="popup__form-input-container">
